# lua-dbt

./: .gitignore  Dockerfile  README.md  build.sh  cloudbuild.yaml  dbt_project.yml  lua_dbt.sh  profiles.yml  push.sh  pyproject.toml  requirements.txt  updateLuaSchema.py
.devcontainer/: devcontainer.dockerfile  devcontainer.json
.github/scripts/: ci_build.py  dbt_build.py  sync_app.py
.github/workflows/: ci.yml  dbt_build.yml  dbt_test.yml
analyses/: ethereum_balances.sql  ethereum_maple_pool_events.sql  polygon_balances.sql  polygon_block_validators.sql
cloudbuild/: build_image.yaml  cloudbuild_build_models.yaml
docs/: blocks.md  logs.md  transactions.md
macros/: clone_table.sql  generate_schema_name.sql  grant_select.sql
macros/admin/: grant_select.sql
macros/conversion/: wei_to_avax.sql  wei_to_eth.sql  wei_to_ftm.sql  wei_to_matic.sql
macros/grants/: grant_select_on_databases.sql
macros/model_gen/: dapp_model.sql
macros/testing/: regression_test__row_count.sql
models/avalanche/: avalanche_blocks.sql  avalanche_contracts.sql  avalanche_logs.sql  avalanche_token_transfers.sql  avalanche_tokens.sql  avalanche_traces.sql  avalanche_transactions.sql  schema.yml  source.yml
models/bitcoin/: bitcoin_blocks.sql  bitcoin_transaction_inputs.sql  bitcoin_transaction_outputs.sql  bitcoin_transactions.sql  schema.yml  source.yml
models/ethereum/: blocks.sql  domains.sql  ethereum_abis.sql  ethereum_balances.sql  ethereum_blocks.sql  ethereum_calls.sql  ethereum_contracts.sql  ethereum_domains.sql  ethereum_events.sql  logs.sql  (+17 more)
seeds/: maple_pools.csv
(+182 files in other folders)
