[tool.poetry]
name = "lua-dbt"
version = "1.0.0"
description = "Luabase dbt project"
authors = ["Luabase"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-clickhouse = "^1.1.0"
clickhouse-connect = "0.1.4"
SQLAlchemy = "^1.4.39"
clickhouse-driver = "^0.2.4"
psycopg2 = "^2.9.3"
numpy = "^1.23.0"
pandas = "^1.4.3"
lz4 = "^4.0.1"
clickhouse-cityhash = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
