[tool.poetry]
name = "lua-dbt"
version = "2022.07.27.01"
description = "Luabase production dbt models"
authors = ["luabase.com"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-clickhouse = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
